2016-07-15  Bin Cheng  <bin.cheng@arm.com>

	* gcc.dg/tree-ssa/scev-8.c: Update test string.

2016-07-15  Cesar Philippidis  <cesar@codesourcery.com>

	* gfortran.dg/goacc/vector_length.f90: New test.

2016-07-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71881
	* gcc.dg/torture/pr71881.c: New testcase.

2016-07-15  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/71887
	* gcc.dg/torture/pr71887.c: New testcase.

2016-07-15  Jakub Jelinek  <jakub@redhat.com>

	PR c/71858
	* gcc.dg/spellcheck-identifiers-3.c: New test.

2016-07-15  Andre Vehreschild  <vehre@gcc.gnu.org>

	PR fortran/71807
	* gfortran.dg/null_9.f90: New test.

2016-07-15  Bin Cheng  <bin.cheng@arm.com>

	* gcc.dg/tree-ssa/loop-41.c: New test.

2016-07-15  Bin Cheng  <bin.cheng@arm.com>

	PR tree-optimization/71347
	* gcc.dg/tree-ssa/pr71347.c: XFAIL on ia64, arm, m68k and sparc.

2016-07-14  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/29819
	* gfortran.dg/bind_c_usage_9.f03: Move dg-error.
	* gfortran.dg/contains.f90: Ditto.
	* gfortran.dg/contains_empty_1.f03: Ditto.
	* gfortran.dg/submodule_3.f08: Ditto.

2016-07-14  Jakub Jelinek  <jakub@redhat.com>

	PR testsuite/71865
	* gcc.dg/diagnostic-token-ranges.c: Add -std=c11 to dg-options.
	(wide_string_literal_in_asm): Use __asm instead of asm, adjust
	expected diagnostics.

	PR c/71858
	* gcc.dg/spellcheck-identifiers.c (snprintf): Declare.
	* gcc.dg/spellcheck-identifiers-2.c: New test.
	* gcc.dg/diagnostic-token-ranges.c (nanl): Declare.
	* c-c++-common/attributes-1.c: Adjust dg-prune-output.

2016-07-14  Jakub Jelinek  <jakub@redhat.com>

	PR tree-optimization/71872
	* gcc.c-torture/compile/pr71872.c: New test.

2016-07-14  Thomas Preud'homme  <thomas.preudhomme@arm.com>

	* gcc.target/arm/atomic-comp-swap-release-acquire.c: Rename into ...
	* gcc.target/arm/atomic-comp-swap-release-acquire-1.c: This.
	* gcc.target/arm/atomic-op-acq_rel.c: Rename into ...
	* gcc.target/arm/atomic-op-acq_rel-1.c: This.