@@ -1,3 +1,9 @@
+2016-07-15  Jonathan Wakely  <jwakely@redhat.com>
+
+	PR c++/58796
+	* libsupc++/pbase_type_info.cc (__pbase_type_info::__do_catch): Make
+	nullptr match handlers of pointer type.
+
 2016-07-15  Edward Smith-Rowland  <3dw4rd@verizon.net>
 
 	Implement C++17 P0025 clamp.
